2010-08-25  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Confirm that a buffer associated with a
	process hs not been killed.
	(twittering-oauth-get-token-alist-native): confirm that the buffer
	associated with the process has not been killed.
	(twittering-oauth-get-token-alist-curl): likewise.

2010-08-22  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-atom-xmltree-to-status-datum):
	retrieve `user-screen-name' and optional `user-name' from XML for
	StatusNet correctly. Thanks to Takashi Masuda.

	* twittering-mode.el: Introduce `clean-up-sentinel' to
	`twittering-call-api'. It is executed whenever the process
	sentinel is invoked.
	(twittering-call-api): add new argument `clean-up-sentinel' for
	the command `get-list-index' and `verify-credentials'.
	(twittering-start-http-session): add new argument
	`clean-up-sentinel' executed whenever the process sentinel is
	invoked.
	(twittering-start-http-session-curl): likewise.
	(twittering-start-http-session-native): likewise.
	(twittering-http-get): likewise.
	(twittering-http-post): likewise.
	(twittering-http-default-sentinel): invoke `clean-up-sentinel' if
	it is non-nil.

	* twittering-mode.el: Fix the race condition on resetting
	authorization information when the process exits abnormally.
	(twittering-verify-credentials): use `clean-up-sentinel' for
	resetting variables when the process exits abnormally or the HTTP
	response is invalid.
	(twittering-http-get-verify-credentials-clean-up-sentinel): new
	function for resetting some variables when the process for
	`verify-credentials' API exits abnormally.

2010-08-21  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Restore `twittering-get-{search,status}-url'.
	(twittering-lookup-get-status-url): removed.
	(twittering-lookup-get-search-url): removed.
	(twittering-get-status-url): look up a function suitable for
	`twittering-service-method' and call it.
	(twittering-get-search-url): likewise.