@@ -6,6 +6,10 @@
 	associated with the process has not been killed.
 	(twittering-oauth-get-token-alist-curl): likewise.
 
+	* twittering-mode.el: Verify an account synchronously.
+	(twittering-verify-credentials): wait for the authorization to
+	finish.
+
 2010-08-22  Tadashi MATSUO  <tad@mymail.twin.jp>
 
 	* twittering-mode.el (twittering-atom-xmltree-to-status-datum):
